fix invisible margin bug

--- a/css/usc.css
+++ b/css/usc.css
@@ -65,8 +65,8 @@ h6
 
 .sidebar-first #content
 {
-  margin-left: -200px;
-  margin-right: -960px;
+  margin-left: 0px;
+  margin-right: 0px;
   width: 780px;
   margin-top: 20px;
 }
@@ -107,10 +107,9 @@ h6
 #navigation-wrapper
 {
   float: left;
-  margin-right: -760px;
   margin-top: 10px;
-  min-height: 20px;
-  width: 100%;
+/*   min-height: 20px; */
+  width: 780px;
   
 }
 
